# worms

./: .gitignore  BeamDTO.cpp  CMakeLists.txt  README.md  WormDTO.cpp  YamlParser.cpp  compile.sh
Box2D/: CMakeLists.txt
parser/: BeamDTO.h  CMakeLists.txt  ScenarioDTO.h  WormDTO.h  YamlParser.h  main.cpp  scenario.yaml
src/client/: CMakeLists.txt  client_Animation.cpp  client_Animation.h  client_Area.cpp  client_Area.h  client_BeamDrawable.cpp  client_BeamDrawable.h  client_Camera.cpp  client_Camera.h  client_CapturedEventFactory.cpp  client_CapturedEventFactory.h  client_CapturedEventSender.cpp  client_CapturedEventSender.h  client_ClosedConnectionCapturedEvent.cpp  client_ClosedConnectionCapturedEvent.h  client_ClosedConnectionDrawable.cpp  client_ClosedConnectionDrawable.h  client_ColorsFactory.cpp  client_ColorsFactory.h  client_ConsoleDrawer.cpp  client_ConsoleDrawer.h  client_DrawableFactory.cpp  client_DrawableFactory.h  client_DynamiteCapturedEvent.h  client_DynamiteDrawable.cpp  client_DynamiteDrawable.h  client_DynamiteExplosionDrawable.cpp  client_DynamiteExplosionDrawable.h  client_EndTurnDrawable.cpp  client_EndTurnDrawable.h  client_FontFactory.cpp  client_FontFactory.h  client_IDrawable.h  client_JumpBackwardCapturedEvent.cpp  client_JumpBackwardCapturedEvent.h  client_JumpForwardCapturedEvent.cpp  client_JumpForwardCapturedEvent.h  client_Main.cpp  client_Message.cpp  client_Message.h  (+45 more)
src/client/capturedEvents/: client_CapturedEventFactory.cpp  client_CapturedEventFactory.h  client_CapturedEventSender.cpp  client_CapturedEventSender.h  client_ClosedConnectionCapturedEvent.cpp  client_ClosedConnectionCapturedEvent.h  client_DynamiteCapturedEvent.cpp  client_DynamiteCapturedEvent.h  client_ICapturedEvent.h  client_JumpBackwardCapturedEvent.h  client_JumpForwardCapturedEvent.h  client_MoveLeftCapturedEvent.cpp  client_MoveLeftCapturedEvent.h  client_MoveRightCapturedEvent.cpp  client_MoveRightCapturedEvent.h  client_RadiocontrolledCapturedEvent.h  client_StopMovingCapturedEvent.cpp  client_StopMovingCapturedEvent.h  client_TeletransportationCapturedEvent.cpp  client_TeletransportationCapturedEvent.h
src/client/drawables/: client_BeamDrawable.h  client_ClosedConnectionDrawable.h  client_DrawableFactory.cpp  client_DrawableFactory.h  client_DynamiteDrawable.h  client_DynamiteExplosionDrawable.h  client_EndTurnDrawable.h  client_IDrawable.h  client_MunitionsDrawable.cpp  client_MunitionsDrawable.h  client_RadiocontrolledDrawable.h  client_RadiocontrolledExplosionDrawable.h  client_StageDrawable.cpp  client_StageDrawable.h  client_StartTurnDrawable.h  client_TurnTimeDrawable.cpp  client_TurnTimeDrawable.h  client_WormDeathDrawable.cpp  client_WormDeathDrawable.h  client_WormDrawable.h  client_YouLoseDrawable.cpp  client_YouLoseDrawable.h  client_YouWinDrawable.cpp  client_YouWinDrawable.h
src/editor/: CMakeLists.txt  beamlabel.cpp  beamlabel.h  compile.sh  config.h  config.h.in  dialog.cpp  dialog.h  dialog.ui  draglabel.cpp  draglabel.h  dragwidget.cpp  dragwidget.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scenariosaver.cpp  scenariosaver.h  wormlabel.cpp  wormlabel.h
src/editor/scenarios/: nuevo.yaml  scenario.yaml
src/server/: CMakeLists.txt  config.h  config.h.in  server_Armory.cpp  server_Armory.h  server_Beam.cpp  server_Beam.h  server_BeamNotification.cpp  server_BeamNotification.h  server_ClientHandler.cpp  server_ClientHandler.h  server_ClosedConnectionNotification.cpp  server_ClosedConnectionNotification.h  server_Dynamite.cpp  server_Dynamite.h  server_DynamiteEvent.h  server_DynamiteExplosionNotification.cpp  server_DynamiteExplosionNotification.h  server_DynamiteNotification.cpp  server_DynamiteNotification.h  server_EndTurnNotification.h  server_GameThread.cpp  server_GameThread.h  server_IEvent.h  server_INotification.h  server_JumpBackwardEvent.h  server_JumpForwardEvent.h  server_Main.cpp  server_MoveLeftEvent.h  server_MoveRightEvent.h  server_Movement.cpp  server_Movement.h  server_MunitionsNotification.cpp  server_MunitionsNotification.h  server_NotifierThread.cpp  server_NotifierThread.h  server_Player.cpp  server_Player.h  server_ProtocolTranslator.cpp  server_ProtocolTranslator.h  (+33 more)
src/server/config/: config.yaml
src/server/events/: server_ClosedConnectionEvent.cpp  server_ClosedConnectionEvent.h  server_DynamiteEvent.cpp  server_DynamiteEvent.h  server_IEvent.h  server_JumpBackwardEvent.cpp  server_JumpBackwardEvent.h  server_JumpForwardEvent.cpp  server_JumpForwardEvent.h  server_MoveLeftEvent.cpp  server_MoveLeftEvent.h  server_MoveRightEvent.cpp  server_MoveRightEvent.h  server_RadiocontrolledEvent.cpp  server_RadiocontrolledEvent.h  server_StopMovingEvent.h  server_TeletransportationEvent.h
src/server/notifications/: server_BeamNotification.cpp  server_BeamNotification.h  server_ClosedConnectionNotification.h  server_DynamiteExplosionNotification.h  server_DynamiteNotification.h  server_EndTurnNotification.cpp  server_EndTurnNotification.h  server_INotification.h  server_MunitionsNotification.cpp  server_RadiocontrolledExplosionNotification.cpp  server_RadiocontrolledExplosionNotification.h  server_RadiocontrolledNotification.cpp  server_RadiocontrolledNotification.h  server_StageNotification.h  server_StartTurnNotification.h  server_TurnTimeNotification.cpp  server_TurnTimeNotification.h  server_WormDeathNotification.cpp  server_WormDeathNotification.h  server_WormNotification.h  server_YouLoseNotification.cpp  server_YouLoseNotification.h  server_YouWinNotification.h
src/server/scenario_parser/: BeamDTO.cpp  BeamDTO.h  CMakeLists.txt  ScenarioDTO.cpp  ScenarioDTO.h  WormDTO.cpp  WormDTO.h  YamlParser.cpp  config.yaml
src/server/scenario_parser/libs/include/yaml-cpp/: binary.h  emitfromevents.h  emittermanip.h  exceptions.h
src/server/scenario_parser/libs/include/yaml-cpp/contrib/: graphbuilder.h
src/server/scenario_parser/libs/include/yaml-cpp/node/: convert.h  node.h
src/server/scenarios/: nuevo.yaml  scenario.yaml
src/tests/: CMakeLists.txt  MyTestSuite.h  README  tests.cpp
(+15 files in other folders)
